# mk8_integrity

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
config/: config.toml  files_to_check.csv
src/: config.rs  file_integrity.rs  main.rs  report.rs  tool_settings.rs
