[package]
name = "mk8_integrity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.59"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
