[package]
name = "mk8_integrity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bincode = "1.3.3"
hex = "0.4.3"
serde = { version = "1.0.198", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.59"
time = "0.3.36"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
